[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-postman"
version = "1.0.0"
description = "Postman for AI agents — inspect, test, replay, simulate and trace multi-agent systems from your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "cli", "debugging", "llm", "multi-agent", "postman"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
agent-postman = "agent_postman.cli:main"

[project.urls]
Homepage = "https://github.com/cifik1-lgtm/agent-postman"
Repository = "https://github.com/cifik1-lgtm/agent-postman"
Issues = "https://github.com/cifik1-lgtm/agent-postman/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_postman*"]
